# etp_generator_maelson

./: .gitignore  .watchignore  CHANGELOG_assistente_inteligente_etp.md  CHANGELOG_memoria_conversa.md  GUIA_INICIO_RAPIDO.md  INTEGRACAO_ASSISTENTE_PROMPT_TECNICO.md  INTERFACE_ASSISTENTE_INTELIGENTE_ETP.md  NOVO_PROMPT_TECNICO_ETP.md  PLANO_FASE2_EDITOR_INTEGRADO.md  README_FASE2.md  RESUMO_FASE1_COMPLETA.md  api.py  app.py  install.sh  integrador.py  pasted_content.txt  plano_evolucao_gerador_documentos.md  plano_fase1_assistente_inteligente_campos.md  plano_fase1_melhoria_prompt_etp.md  plano_memoria_conversa.md  processador_documentos.py  pyproject.toml  readme.txt  requirements.txt  requirements_api.txt  resumo_executivo_evolucao.md  test_Tiny.html
frontend/: package-lock.json  package.json  start.sh
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/Config/: ConfigPage.js
frontend/src/components/Dashboard/: Dashboard.js
frontend/src/components/ETP/: EtpEditor.js  EtpForm.js
frontend/src/components/Layout/: Header.js  Sidebar.js
frontend/src/components/RAG/: RagAssistant.js
frontend/src/services/: apiService.js
src/: Index.css
src/components/chat/: ChatInterface.tsx
src/components/etp/: ETPGenerator.tsx  ETPPDFDocument.tsx
src/components/guide/: LegalGuide.tsx
src/components/navigation/: Header.tsx
src/components/pages/: index.tsx
