[tool.poetry]
name = "makeetp"
version = "0.1.0"
description = "web system from creating governamental docs."
authors = ["maellson <mqmaellson39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.44.1"
pandas = "^2.2.3"
anthropic = "^0.50.0"
markdown = "3.5.2"
weasyprint = "61.0"
openai = "^1.76.0"
langchain-openai = "^0.3.14"
langchain = "^0.3.24"
langchain-anthropic = "^0.3.12"
langchain-core = "^0.3.56"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
